--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      background-color: pink;
+    }
+  </style>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="mediaquery.css">
   <script src="https://kit.fontawesome.com/c60b143c2b.js" crossorigin="anonymous"></script>
